bobcat (4.08.06)

  * Added Exception::factory members returning stream objects, added
    Exception::open members accepting two ios::openmode arguments.

  * Repaired flaws in man-pages.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 17 Dec 2018 09:44:20 +0100
 
bobcat (4.08.05)

  * [[fallthrough]] requires a final semicolon (cf. C++ std 20, 10.6.5).
    Bobcat's code is fixed accordingly.

  * The BigInt::diophantus members do not require a BigInt object, and are now
    defined as static members.

  * Stat declares a default copy constructor, as it defines a move
    constructor. 

  * Superfluous 'return 0;' statements removed from source files and
    man-pages. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 26 Sep 2018 13:33:52 +0200

bobcat (4.08.04)

  * Migrated from Github to Gitlab.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 17 Jun 2018 14:16:16 +0530

bobcat (4.08.03)

  * Compilation requires c++17

  * LinearMap does not define the Alloc template parameter anymore: no longer
    required and producing a compilation error with g++8

  * Various cosmetic changes

  * The `build' script has new options: `test', building one class only
    (align) and `mantest', building a subset of the man-pages. These options
    were added for (internal) testing purposes only to test Debian package
    construction

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 05 May 2018 07:09:00 +0200

bobcat (4.08.02)

  * CSV4180 supports configurable field separator characters.

  * Fixed a flaw in the CSV4180 man-page.

  * Added new member 'release()' to the class CSV4180.

  * CSV4180's member clear by default resets the number of required fields to
    0. 

  * Members in ConfigFile received const modifiers according to the ConfigFile
    man-page.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 16 Sep 2017 10:14:41 +0200

bobcat (4.08.01)

  * Fixed a bug in fswap due to which fswap could not swap plain pointers.
