@@ -2,7 +2,6 @@
 
 #include <iostream>
 #include <cstdlib>
-#include <limits>
 
 #include <bobcat/exception>
 
